--- a/requirements.txt
+++ b/requirements.txt
@@ -1,139 +1,4 @@
-absl-py==2.1.0
-accelerate==0.34.2
-adafruit-board-toolkit==1.1.1
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.6
-aiosignal==1.3.1
-alembic==1.13.3
-altgraph==0.17.4
-astroid==2.15.8
-asttokens==2.2.1
-async-timeout==4.0.3
-attrs==24.2.0
-auto-py-to-exe==2.44.1
-banal==1.0.6
-bcrypt==3.2.2
-beautifulsoup4==4.12.3
-bitarray==2.8.3
-bitstring==4.1.2
-blinker==1.8.2
-bottle==0.13.1
-bottle-websocket==0.2.9
-certifi==2024.8.30
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comtypes==1.3.1
-coqpit==0.0.17
-cryptography==38.0.4
-dataset==1.6.2
-datasets==3.0.1
-dill==0.3.8
-docutils==0.20.1
-ecdsa==0.18.0
-Eel==0.17.0
-esptool==4.6.2
-et-xmlfile==1.1.0
-filelock==3.16.1
 Flask==3.0.3
-frozenlist==1.4.1
-fsspec==2024.6.1
-future==1.0.0
-gevent==24.2.1
-gevent-websocket==0.10.1
-greenlet==3.0.3
-grpcio==1.66.1
-huggingface-hub==0.25.1
-idna==3.10
-isort==5.12.0
-itsdangerous==2.2.0
-jedi==0.18.2
-Jinja2==3.1.4
-joblib==1.4.2
-keyboard==0.13.5
-lazy-object-proxy==1.9.0
-Mako==1.3.5
-Markdown==3.7
-MarkupSafe==2.1.5
-mccabe==0.7.0
-MouseInfo==0.1.3
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-mypy==1.5.1
-mypy-extensions==1.0.0
-networkx==3.3
-numpy==1.26.4
-opencv-python==4.9.0.80
-openpyxl==3.1.5
-packaging==23.2
 pandas==2.2.3
-paramiko==3.2.0
-parso==0.8.3
-pdfminer.six==20231228
-pdfplumber==0.11.4
-pefile==2023.2.7
-pillow==10.2.0
-platformdirs==4.0.0
-playwright==1.47.0
-protobuf==5.28.2
-psutil==6.0.0
-pyarrow==17.0.0
-PyAutoGUI==0.9.54
-pycparser==2.21
-PyDirectInput==1.0.4
-pyee==12.0.0
-PyGetWindow==0.0.9
-pyinstaller==6.4.0
-pyinstaller-hooks-contrib==2024.2
-pylint==2.17.7
-PyMsgBox==1.0.9
-PyNaCl==1.5.0
-pynput==1.7.6
-pyparsing==3.1.4
-pypdfium2==4.30.0
-pyperclip==1.8.2
-PyRect==0.2.0
-PyScreeze==0.1.30
-pyserial==3.5
-python-dateutil==2.9.0.post0
-pytweening==1.2.0
-pytz==2024.2
-PyYAML==6.0.1
-reedsolo==1.7.0
-regex==2024.9.11
-requests==2.32.3
-safetensors==0.4.5
-schedule==1.2.1
-scikit-learn==1.5.2
-scipy==1.14.1
-Send2Trash==1.8.2
-sentencepiece==0.2.0
-six==1.16.0
-soundfile==0.12.1
-soupsieve==2.6
-SQLAlchemy==1.4.54
-sympy==1.13.3
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-thonny==4.1.4
-threadpoolctl==3.5.0
-tokenizers==0.20.0
-tomli==2.0.1
-tomlkit==0.12.3
-torch==2.4.1
-tqdm==4.66.5
-trainer==0.0.36
-transformers==4.45.0
-typing_extensions==4.8.0
-tzdata==2024.2
-urllib3==2.2.3
-websockets==11.0.3
-Werkzeug==3.0.4
-whichcraft==0.6.1
-wrapt==1.16.0
-xxhash==3.5.0
-yarl==1.12.1
-zope.event==5.0
-zope.interface==7.0.3
+openpyxl==3.1.5
+gunicorn==21.2.0
